k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: linkedeye-core
  labels:
    app.kubernetes.io/part-of: linkedeye
---
apiVersion: v1
kind: Namespace
metadata:
  name: linkedeye-ai
  labels:
    app.kubernetes.io/part-of: linkedeye
---
apiVersion: v1
kind: Namespace
metadata:
  name: linkedeye-voice
  labels:
    app.kubernetes.io/part-of: linkedeye
---
apiVersion: v1
kind: Namespace
metadata:
  name: linkedeye-automation
  labels:
    app.kubernetes.io/part-of: linkedeye
